--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage" : "https://Queen-esther01.github.io/React-Todo"
   },
   "eslintConfig": {
     "extends": "react-app"
