--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage" : "https://Queen-esther01.github.io/React-Todo"
+    "homepage" : "https://queen-esther01.github.io/React-Todo/"
   },
   "eslintConfig": {
     "extends": "react-app"
