--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage" : "https://queen-esther01.github.io/React-Todo/"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
